Adapted stylesheet for processcomment handler (light template), fixed broken layout in processcomment, now displaying the whole page before the commentform (which I think is important if one has to comment on the content!). Brian, note that because of this change when processcomment is loaded the user has to scroll to the bottom to see the comment form, we will need to find a better solution. Once we have settled on the final implementation I'll modify the other templates accordingly, refs #380 and #418

--- a/templates/light/css/light.css
+++ b/templates/light/css/light.css
@@ -119,8 +119,6 @@ body{
 }
 
 .commentform {
-	background-color: #EEEEEE;
-	padding: 10px;
 }
 
 #commentform textarea {
